--- a/koha-tmpl/intranet-tmpl/default/en/acqui/newbasket2.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/newbasket2.tmpl
@@ -9,6 +9,7 @@
 	<form action="/cgi-bin/koha/acqui/newbasket2.pl">
 	<input type="hidden" name="booksellerid" value=<!-- TMPL_VAR NAME="booksellerid" -->>
 	<input type="hidden" name="basketno" value=<!-- TMPL_VAR NAME="basketno" -->>
+	<input type="hidden" name="acq_search" value="1">
 	<b>New Search: </b><input="text"  size="25"   name="search">
 	<input type="submit" value="Search" class="button acquisition">
 	</form>
