Adding ability to return search results for biblios that have no biblioitems

--- a/koha-tmpl/intranet-tmpl/default/en/acqui/recieve.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui/recieve.tmpl
@@ -21,6 +21,7 @@
 			<input type="hidden" name="gst" value="<!-- TMPL_VAR NAME="gst" -->">
 			<input type="hidden" name="freight" value="<!-- TMPL_VAR NAME="freight" -->">
 			<input type="hidden" name="invoice" value="<!-- TMPL_VAR NAME="invoice" -->">
+			<input type="hidden" name="acq_search" value="1">
 			
 			<b>Search ISBN or Title:</b> <input type="text" size="25" name="recieve">
 		</form>
