--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbooks.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbooks.tmpl
@@ -1,61 +1,41 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Cataloging Home<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
-
 	<h1>Catalog Maintenance</h1>
 	<!-- TMPL_IF name="noitemsfound" -->
-		No items found
+		<font color="red" size="4">No items found</font>
 	<!-- /TMPL_IF -->
 	
-<h2>Search Existing Records</h2>
-<div id="addbooks_search">
-	<form action="isbnsearch.pl">
-		<p>
-			<label for="title">Title</label>
-			<input type="hidden" name="marclist" value="biblio.title" />
-			<input type="hidden" name="and_or" value="and" />
-			<input type="hidden" name="excluding" value="" />
-			<input type="hidden" name="operator" value="contains" />
-			<input type="text" name="value" id="title"size="35" />
-		</p>
-		<p>
-			<label for="isbn">ISBN</label>
-			<input type="hidden" name="marclist" value="biblioitems.isbn" />
-			<input type="hidden" name="and_or" value="and" />
-			<input type="hidden" name="excluding" value="" />
-			<input type="hidden" name="operator" value="start" />
-			<input type="text" name="value" id="isbn"size="35" />
-		</p>
-		<p><input type="submit" value="Search" /></p>
-		<ul>
-			<li>If the ISBN is found into the database, that record will be retrieved and can be modified.</li>
-			<li>If the ISBN is found in the reservoir, it will be retrieved and a full record added.</li>
-			<li>Otherwise, a record can be added from scratch.</li>
-		</ul>
-	</form>
-</div>
-<div id="addbooks_add_without_search">
-	<!-- TMPL_IF NAME="NOTMARC" -->
-		<form action="addbiblio.pl">
-			<input type="submit" value="Add Record Without Search" />
+	<div class="data">
+		<form action="isbnsearch.pl">
+		<table>
+		<caption>Search Existing Records</caption>
+		<tr><th><label for="title">Title</label></th>
+		<td>		<input type="text" name="title" id="title"size="35" /></td></tr>
+		<tr><th><label for="isbn">ISBN</label></th>
+		<td><input type="text" name="isbn" id="isbn"size="35" /></td></tr>		
+		</table></div>
+				<p><input type="submit" value="Search" class="submit" /></p>
+				<div class="help"><ul class="notes"><li>If the ISBN is found into the database, that record will be retrieved and can be modified.</li>
+	<li>If the ISBN is found in the reservoir, it will be retrieved and a full record added.</li>
+	<li>Otherwise, a record can be added from scratch.</li></ul></div>
 		</form>
-	<!-- TMPL_ELSE -->
-		<form action="addbiblio.pl" method="post">
-		<h3>Create a Blank Bibliographic Record</h3>
-		<p>
-			<label for="frameworkcode">Choose a Framework:</label>
-			<select name="frameworkcode" id="frameworkcode">
-				<option value="">Default</option>
-				<!-- TMPL_LOOP NAME="frameworkcodeloop" -->
-					<option value="<!-- TMPL_VAR NAME="value" -->">
-						<!-- TMPL_VAR NAME="frameworktext" -->
-					</option>
-				<!-- /TMPL_LOOP -->
-			</select>
-			<input type="submit" value="Add Record Without Search" />
-		</p>
-		</form>
-			<!-- /TMPL_IF -->
-</div>
+
+		<!-- TMPL_IF name="noitemsfound" -->
+				<form action="addbiblio.pl" method="post">
+		<div class="data"><table>
+		<caption>Create a Blank Bibliographic Record</caption>
+		<tr><th><label for="frameworkcode">Choose a Framework:</label></th><td><select name="frameworkcode" id="frameworkcode">
+						<option value="">Default</option>
+						<!-- TMPL_LOOP NAME="frameworkcodeloop" -->
+							<option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="frameworktext" --></option>
+						<!-- /TMPL_LOOP -->
+					</select> <input type="submit" value="Add Record Without Search" class="submit" /></td></tr>
+		</table></div></form>
+			
+		<!-- /TMPL_IF -->
+
+
+
+
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
