--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
@@ -1,8 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Search order
 <!-- TMPL_INCLUDE NAME="doc-head-close-calendar.inc" -->
+
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
-
 
 	<h1>Order search</h1>
 	<div id="acqui_histsearch">
@@ -89,7 +89,7 @@
 			<!-- TMPL_LOOP NAME="suggestions_loop" -->
 				<tr>
 					<td>&nbsp;</td>
-					<td><a href="basket.pl?basket=<!-- TMPL_VAR name="basketno" -->"><!-- TMPL_VAR NAME="title" --></a></td>
+					<td><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->"><!-- TMPL_VAR NAME="title" --></a></td>
 					<td><!-- TMPL_VAR NAME="author" --></td>
 					<td><!-- TMPL_VAR NAME="name" --></td>
 					<td><!-- TMPL_VAR name="creationdate" --></td>
