--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/newordersuggestion.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/newordersuggestion.tmpl
@@ -52,7 +52,7 @@
 				</td>
 				<td>
 					<!-- TMPL_IF name="biblionumber" -->
-						<a href="neworderempty.pl?booksellerid=<!-- TMPL_VAR NAME="supplierid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->&amp;suggestionid=<!-- TMPL_VAR NAME="suggestionid" -->&biblio=<!-- TMPL_VAR name="biblionumber" -->" class="button acquisition">Order</a>
+						<a href="neworderempty.pl?booksellerid=<!-- TMPL_VAR NAME="supplierid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->&amp;suggestionid=<!-- TMPL_VAR NAME="suggestionid" -->&biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button acquisition">Order</a>
 					<!-- TMPL_ELSE -->
 						<a href="neworderempty.pl?booksellerid=<!-- TMPL_VAR NAME="supplierid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->&amp;suggestionid=<!-- TMPL_VAR NAME="suggestionid" -->" class="button acquisition">Order</a>
 					<!-- /TMPL_IF -->
