--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
@@ -1,9 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- <!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket (<!-- TMPL_VAR NAME="basketno" -->) for <!-- TMPL_VAR NAME="name" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
-
-
-	<h1><!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket <!-- TMPL_VAR NAME="basketno" --> for <a href="supplier.pl?id=<!-- TMPL_VAR NAME="booksellerid" -->"><!-- TMPL_VAR NAME="name" --></a></h1>
+<script>
+function Searchrecord()
+{
+	 window.open('/cgi-bin/koha/serials/subscription-bib-search.pl','FindABibIndex','width=500,height=400,toolbar=no,scrollbars=yes');
+}
+</script>
+	<h1><!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket <!-- TMPL_VAR NAME="basketno" --> for <a href="supplier.pl?supplierid=<!-- TMPL_VAR NAME="booksellerid" -->"><!-- TMPL_VAR NAME="name" --></a></h1>
 	<div id="acqui_basket_summary">
 		<h2>Basket Details</h2>
 		<table>
@@ -12,14 +17,18 @@
 		<tr><th>Open On:</th><td><!-- TMPL_VAR NAME="creationdate" --></td></tr>
 		<tr><th>For:</th><td>Supplier Id <!-- TMPL_VAR NAME="booksellerid" --></td></tr>
 		<tr><th>Invoice Number:</th><td><!-- TMPL_VAR NAME="booksellerinvoicenumber" --></td></tr>
+		<tr><th>Purchase Order Number:</th><td><!-- TMPL_VAR NAME="purchaseordernumber" --></td></tr>
 		<!-- TMPL_IF name="closedate" --><tr><th>Closed On:</th><td> <!-- TMPL_VAR name="closedate" --></td></tr><!-- /TMPL_IF -->
 		</table>
 		<!-- TMPL_UNLESS name="closedate" -->
+		<!-- TMPL_IF NAME="basketno" -->
 		<form action="/cgi-bin/koha/acqui/booksellers.pl" method="get">
+			<input type="hidden" name="op" value="close" />
 			<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
 			<input type="hidden" name="supplier" value="<!-- TMPL_VAR name="booksellerid" -->" />
-			<input type="submit" value="Close this Basket" />
+			<input type="submit" value="Confirm Close this Basket" />
 		</form>
+		<!-- /TMPL_IF-->
 		<!-- /TMPL_UNLESS -->
 	</div>
 	
@@ -29,13 +38,12 @@
 		<table>
 			<tr>
 				<th scope="col">Order</th>
-				<th scope="col"><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=biblioitems.publishercode">Publisher</a></th>
-				<th scope="col">Title</th>
+				<th scope="col">Publisher</th>
+				<th scope="col"><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=biblio.title">Title</a></th>
 				<th scope="col">RRP</th>
-				<th scope="col">Est.</th>
 				<th scope="col">Qty.</th>
 				<th scope="col">Total</th>
-				<th scope="col"><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=aqorderbreakdown.bookfundid,biblioitems.publishercode">Fund</a></th>
+				<th scope="col"><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->&amp;order=aqorderbreakdown.bookfundid">Fund</a></th>
 <!-- TMPL_IF name="active" -->
 <!-- TMPL_UNLESS name="closedate" -->
 					<th scope="col">Remove</th>
@@ -46,7 +54,7 @@
 				<!-- TMPL_IF NAME="highlight" --><tr class="highlight"><!-- TMPL_ELSE --><tr><!-- /TMPL_IF -->
 							<td><!-- TMPL_VAR NAME="ordernumber" --></td>
 					<td><!-- TMPL_VAR NAME="publishercode" --></td>
-<!-- TMPL_IF name="closedate" -->
+					<!-- TMPL_IF name="closedate" -->
 						<td><p>
 							<!-- TMPL_VAR NAME="title" --><br/>
 								<!-- TMPL_VAR NAME="author" -->
@@ -64,24 +72,25 @@
 							</p>
 						</td>
 					<!-- /TMPL_IF -->
-					<td><!-- TMPL_VAR NAME="rrp" --></td>
-					<td><!-- TMPL_VAR NAME="ecost" --></td>
+					<td><!-- TMPL_VAR NAME="rrp" --></td>					
 					<td><!-- TMPL_VAR NAME="quantity" --></td>
 					<td><!-- TMPL_VAR NAME="line_total" --></td>
 					<td><!-- TMPL_VAR NAME="bookfundid" --></td>
 					<!-- TMPL_IF name="active" -->
 					<!-- TMPL_UNLESS name="closedate" -->
+					<!-- TMPL_UNLESS name="donotdelete" -->
 					<td>
 							<form action="addorder.pl" method="get">
 								<input type="hidden" name="ordnum" value="<!-- TMPL_VAR NAME="ordernumber" -->" />
 								<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
 								<input type="hidden" name="quantity" value="0" />
-								<input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
+								<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
 								<input type="submit" class="delete" value="Delete" />
 							</form>
 						</td>
 					<!-- /TMPL_UNLESS -->
-						<!-- /TMPL_IF -->
+					<!-- /TMPL_UNLESS -->
+					<!-- /TMPL_IF -->
 				</tr>
 			<!-- /TMPL_LOOP -->
 			
@@ -90,24 +99,25 @@
 					<input type="hidden" name="number" value="<!-- TMPL_VAR NAME="count" -->" />
 					<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
 				</td>
-				<th>SubTotal</th>
+				<th align="right">SubTotal</th>
 				<th><!-- TMPL_VAR NAME="sub_total_est" --></th>
-				<th><!-- TMPL_VAR NAME="sub_total" --></td>
-				<th><!-- TMPL_VAR name="qty_total" --></th>
-				<td colspan="2" rowspan="3">&nbsp;</td>
-				
+				<th><!-- TMPL_VAR name="qty_total" --></th>				
 			</tr>
+			<!--TMPL_IF NAME="disc_est"-->
 			<tr>
-				<th>GST</th>
+				<th align="right">Discount</th>
+				<th>-<!-- TMPL_VAR NAME="disc_est" --></th>
+			</tr>
+			<!--/TMPL_IF-->
+			<!--TMPL_IF NAME="gist"-->
+			<tr>
+				<th align="right">Tax</th>
 				<th><!-- TMPL_VAR NAME="gist_est" --></th>
-				<th><!-- TMPL_VAR NAME="gist" --></th>
-				<th>&nbsp;</th>
 			</tr>
-			<tr>
-				<th>TOTAL  (<!-- TMPL_VAR NAME="currency" -->)</th>
+			<!--/TMPL_IF-->
+			<tr><td></td><td></td>
+				<th align="right">TOTAL</th>
 				<th><!-- TMPL_VAR NAME="grand_total_est" --></th>
-				<th><!-- TMPL_VAR NAME="grand_total" --></th>
-				<th>&nbsp;</th>
 			</tr>
 		</table>
 	<!-- TMPL_ELSE -->
@@ -120,12 +130,14 @@
 	</div>
 	<div id="acqui_basket_add">
 		<h2>Add To Order</h2>
-		<form action="/cgi-bin/koha/acqui/neworderbiblio.pl" method="post">
+		<form action="/cgi-bin/koha/acqui/neworderempty.pl" method="get" name="f" id="f">
 			<input type="hidden" name="booksellerid" value="<!-- TMPL_VAR NAME="booksellerid" -->" />
 			<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
-			<ul><li>From an existing record: <input type="text"  size="25"   name="search" />
-			<input type="submit" value="Search" /></li>
-			<li><a href="/cgi-bin/koha/acqui/newordersuggestion.pl?booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->">From a Suggestion</a></li>
+			To add from an existing record:
+			<li>Enter an existing  biblionumber: <input type="text"  size="25"   name="biblionumber" />
+			<input type="submit" value="Add order" /></li>
+			<li>or <a href="#" onClick="Searchrecord()">Search for an existing Biblio</a></li>
+			<ul><li><a href="/cgi-bin/koha/acqui/newordersuggestion.pl?booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->">From a Suggestion</a></li>
 			<li><a href="/cgi-bin/koha/acqui/neworderempty.pl?booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->">New Record</a></li>
 			</ul>
 		</form>
