--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/booksellers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/booksellers.tmpl
@@ -2,14 +2,14 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
-<h1>You searched on <b>supplier <!-- TMPL_VAR name="supplier" -->,</b> <!-- TMPL_VAR name="count" --> results found</h1>
+<h1>You searched on <b>supplier: <!-- TMPL_VAR name="supplier" -->,</b> <!-- TMPL_VAR name="count" --> baskets found</h1>
 <div id="acqui_order_supplierlist">
 	<table>
 	<tr>
 		<th>Order</th>
-		<th>Receive</th>
 		<th>Company</th>
 		<th>&nbsp;</th>
+		
 	</tr>
 	
 	<!-- TMPL_LOOP name="loop_suppliers" -->
@@ -21,23 +21,27 @@
 					Inactive
 				<!-- /TMPL_IF -->
 			</td>
-			<td>
-				<a href="parcels.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Recieve order</a>
-			</td>
+			
 			<td><a href="supplier.pl?supplierid=<!-- TMPL_VAR name=supplierid -->"><!-- TMPL_VAR name="name" --></a></td>
-			<td>
-				<table>
-						<tr>
-							<th>Basket</th>
-							<th>Items</th>
-							<th>Created by</th>
-							<th>Date</th>
-							<th>&nbsp;</th>
-						</tr>
+			
+			<!--TMPL_IF NAME="ordcount"-->
+				<td>
+				<a href="parcel.pl?supplierid=<!-- TMPL_VAR name="supplierid" -->">Recieve All orders</a>
+				</td>
+			<!--/TMPL_IF-->
+			
+				<td>
+				<table><!--TMPL_IF NAME="ordcount"-->
+					<th>Basket</th>
+					<th>Purchase order</th>
+					<th>Created by</th>
+					<th>Date</th>
+					<th>&nbsp;</th>
+					<!--/TMPL_IF-->	
 						<!-- TMPL_LOOP NAME="loop_basket" -->
 							<tr>
 								<td><!-- TMPL_VAR NAME="basketno" --></td>
-								<td><TMPL_VAR NAME="total"></td>
+								<td><TMPL_VAR NAME="purchaseordernumber"></td>
 								<td>
 									<!-- TMPL_VAR name="firstname" -->
 										<!-- TMPL_VAR name="surname" -->
@@ -46,14 +50,21 @@
 								<td>
 									<!-- TMPL_IF name="closedate" -->
 										closed on <!-- TMPL_VAR NAME="closedate" -->
-										<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
+										<a href="/cgi-bin/koha/acqui/basket.pl?basketno=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
 									<!-- TMPL_ELSE -->
 										<!-- TMPL_IF name="active" -->
-											<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">modify</a>
+											<a href="/cgi-bin/koha/acqui/basket.pl?basketno=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">modify</a>
 										<!-- TMPL_ELSE -->
-											<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
+											<a href="/cgi-bin/koha/acqui/basket.pl?basketno=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
 										<!-- /TMPL_IF -->
 									<!-- /TMPL_IF -->
+								</td>
+								<td>
+								<!--TMPL_IF NAME="ordcount"-->
+								
+								<a href="parcel.pl?supplierid=<!-- TMPL_VAR name="supplierid" -->&basketno=<!-- TMPL_VAR NAME="basketno" -->">Recieve this order</a>
+								
+								<!--/TMPL_IF-->
 								</td>
 							</tr>
 						<!-- /TMPL_LOOP -->
