--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/neworderempty.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/neworderempty.tmpl
@@ -4,7 +4,7 @@
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 <script language="javascript" type="text/javascript">
-<!--
+
 function update(f){
   //collect values
   quantity=f.quantity.value
@@ -22,20 +22,24 @@ function update(f){
   //  total=f.total.value
   //make useful constants out of the above
   exchangerate=f.elements[currency].value      //get exchange rate
-  gst_on=(!listinc && applygst);
+  gst_on=(applygst);
   //do real stuff
+   if (listinc){
+listprice=listprice*100/(100+f.gstrate.value)
+}
   rrp=listprice*exchangerate;
   ecost=rrp*(100-discount)/100
   GST=0;
   if (gst_on){
-    rrp=rrp*(1+<!-- TMPL_VAR NAME="gstrate" -->);
-    GST=ecost*(<!-- TMPL_VAR NAME="gstrate" -->);
+ //   rrp=rrp*(1+f.gstrate.value/100);
+    GST=ecost*(f.gstrate.value)/100;
   }
 
   total=(ecost+GST)*quantity
 
   f.rrp.value=rrp;
   f.ecost.value=ecost;
+  f.unitprice.value=ecost+GST
   f.GST.value=GST;
   f.total.value=total;
   return true;
@@ -54,17 +58,29 @@ function messenger(X,Y,etc){
 }
 
 function check(f) {
-  quantity=f.quantity.value
-  title=f.title.value
+  quantity=f.quantity.value;
+  title=f.title.value;
+ biblio=f.biblionumber.value;
+ invoice=f.purchaseordernumber.value;
+suggestionid="<!--TMPL_VAR NAME="suggestionid"-->";
   if (title == "") {
-  	alert("Title can't be empty");
+  	alert("Title can't be empty- Have you created the biblio?");
+	return false;
+  }
+ if (biblio == "" && suggestionid=="") {
+  	alert("A biblio is not created- please create the biblio first?");
 	return false;
   }
   if (quantity ==0) {
   	alert("Quantity must be >0");
 	return false;
   }
+
 	document.frusin.submit();
+}
+function AddBiblio() {
+     window.open("/cgi-bin/koha/cataloguing/addbiblio.pl?fromserials=1&popup=1&suggestionid=<!--TMPL_VAR NAME="suggestionid"-->","AddBiblio",'width=700,height=400,toolbar=no,scrollbars=yes,status=yes');
+
 }
 </script>
 <h1>
@@ -83,6 +99,7 @@ function check(f) {
 		<tr><th>Open On:</th><td><!-- TMPL_VAR NAME="creationdate" --></td></tr>
 		<tr><th>For:</th><td>Supplier Id <!-- TMPL_VAR NAME="booksellerid" --></td></tr>
 		<tr><th>Invoice Number:</th><td><!-- TMPL_VAR NAME="booksellerinvoicenumber" --></td></tr>
+		<tr><th>Purchase Order Number:</th><td><!-- TMPL_VAR NAME="purchaseordernumber" --></td></tr>
 		<!-- TMPL_IF name="closedate" --><tr><th>Closed On:</th><td> <!-- TMPL_VAR name="closedate" --></td></tr><!-- /TMPL_IF -->
 		</table>
 	</div>
@@ -91,15 +108,13 @@ function check(f) {
 	<h2>catalogue details</h2>
 	<form action="/cgi-bin/koha/acqui/addorder.pl" method="post" name="frusin">
 	<!-- TMPL_UNLESS name="existing" -->
-		<input type="hidden" name="existing" value="no" />
+		<input type="hidden" name="existing" value="no" >
 	<!-- /TMPL_UNLESS -->
 	<input type="hidden" name="ordnum" value="<!-- TMPL_VAR NAME="ordnum" -->" />
 	<input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
 	<input type="hidden" name="booksellerid" value="<!-- TMPL_VAR NAME="booksellerid" -->" />
-	<input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="biblio" -->" />
-	<input type="hidden" name="bibitemnum" value="<!-- TMPL_VAR NAME="biblioitemnumber" -->" />
+	<input type="hidden" name="biblionumber" id="biblionumber"  value="<!-- TMPL_VAR NAME="biblionumber" -->" />
 	<input type="hidden" name="oldtype" value="<!-- TMPL_VAR NAME="itemtype" -->" />
-	<input type="hidden" name="discount" value="<!-- TMPL_VAR NAME="discount" -->" />
 	<input type="hidden" name="listinc" value="<!-- TMPL_VAR NAME="listincgst" -->" />
 	<input type="hidden" name="currency" value="<!-- TMPL_VAR NAME="currency" -->" />
 	<input type="hidden" name="applygst" value="<!-- TMPL_VAR NAME="gstreg" -->" />
@@ -107,59 +122,45 @@ function check(f) {
 	<!-- TMPL_LOOP NAME="loop_currencies" -->
 		<input type="hidden" name="<!-- TMPL_VAR NAME="currency" -->" value="<!-- TMPL_VAR NAME="rate" -->" />
 	<!-- /TMPL_LOOP -->
-	<p>
+	
+	<p> 
 		<label><b>Title *</b></label>
-		<!-- TMPL_IF name="biblio" -->
-			<input type="hidden" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" /><!-- TMPL_VAR NAME="title" -->
-		<!-- TMPL_ELSE -->
-			<input type="text" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" />
-		<!-- /TMPL_IF -->
+		
+			<input type="text" size="20" name="title" id="title" value="<!-- TMPL_VAR NAME="title" -->" READONLY/>Auto filled
 	</p>
+	<!-- TMPL_IF name="biblionumber" -->
 	<p>
 		<label>Author</label>
-		<!-- TMPL_IF name="biblio" -->
 			<input type="hidden" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" /><!-- TMPL_VAR NAME="author" -->
-		<!-- TMPL_ELSE -->
-			<input type="text" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" />
-		<!-- /TMPL_IF -->
 	</p>
 	<p>
 		<label> Publisher</label>
-		<!-- TMPL_IF name="biblio" -->
 			<input type="hidden" size="20" name="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" /><!-- TMPL_VAR NAME="publishercode" -->
-		<!-- TMPL_ELSE -->
-			<input type="text" size="20" name="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" />
-		<!-- /TMPL_IF -->
 	</p>
 	<p>
 		<label>Copyright Date</label>
-		<!-- TMPL_IF name="biblio" -->
 			<input type="hidden" size="20" name="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" /><!-- TMPL_VAR NAME="copyrightdate" -->
-		<!-- TMPL_ELSE -->
-			<input type="text" size="20" name="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" />
-		<!-- /TMPL_IF -->
+		
 	</p>
 	<p>
 		<label>Format</label>
-		<!-- TMPL_VAR NAME="CGIitemtype" -->
+		<!-- TMPL_VAR NAME="itemtype" -->
 	</p>
 	<p>
 		<label>ISBN</label>
-		<!-- TMPL_IF name="biblio" -->
 			<input type="hidden" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" /><!-- TMPL_VAR NAME="isbn" -->
-		<!-- TMPL_ELSE -->
-			<input type="text" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" />
-		<!-- /TMPL_IF -->
+		
 	</p>
 	<p>
 		<label>Series</label>
-		<!-- TMPL_IF name="biblio" -->
 			<input type="hidden" size="20" name="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" /><!-- TMPL_VAR NAME="seriestitle" -->
-		<!-- TMPL_ELSE -->
-			<input type="text" size="20" name="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" />
-		<!-- /TMPL_IF -->
 	</p>
-	<p>
+	<!--TMPL_ELSE-->
+	<!--TMPL_UNLESS NAME="suggestionid"--><p><a href="#" onClick="AddBiblio()">First Create a Biblio for this order</a></p><!--/TMPL_UNLESS-->
+	<!--/TMPL_IF-->
+		
+	<h2>Accounting details</h2>
+		<p>
 		<label>Branch</label>
 		<select name="branch">
 		<!-- TMPL_LOOP name="branchloop" -->
@@ -167,59 +168,63 @@ function check(f) {
 		<!-- /TMPL_LOOP -->
 		</select>
 	</p>
-		
-	<h2>Accounting details</h2>
 		<p>
 			<label>Quantity</label>
-			<!-- TMPL_IF name="close" -->
-				<input type="hidden" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" /><!-- TMPL_VAR NAME="quantity" -->
-			<!-- TMPL_ELSE -->
-				<input type="text" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" onchange="update(this.form);" />
-		  	<!--/TMPL_IF-->
+			
+				<input type="text" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" onchange="update(this.form);" <!-- TMPL_IF name="close" -->readonly<!--/TMPL_IF--/>
+		
 		</p>
 		<p>
 			<label>Bookfund</label>
 			<!-- TMPL_IF name="close" -->
-				<input type="hidden" size="20" name="bookfund" value="<!-- TMPL_VAR NAME="bookfundid" -->" /><!-- TMPL_VAR NAME="bookfundname" -->
+				<input type="hidden" size="20" name="bookfundid" value="<!-- TMPL_VAR NAME="bookfundid" -->" /><!-- TMPL_VAR NAME="bookfundname" -->
 			<!-- TMPL_ELSE -->
 				<!-- TMPL_VAR NAME="CGIbookfund" -->
 		  	<!--/TMPL_IF-->
 		</p>
+		Note: All figures are in local currency, except the suppliers list price which is indicated.Currency conversion is done automatically
+		<!-- TMPL_IF NAME="gstreg" -->
+		<p>
+		 <label> Applicable Tax rate</label>
+		<input type="text" size="20" name="gstrate" value="<!--TMPL_VAR NAME="gstrate"-->" onchange="update(this.form)" />%
+		</p>
+		<!--/TMPL_IF-->
 		<p>
 			<label>Suppliers List Price</label>
-			<!-- TMPL_IF name="close" -->
-				<input type="hidden" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" /><!-- TMPL_VAR NAME="listprice" -->
-			<!-- TMPL_ELSE -->
-				<input type="text" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" onchange="update(this.form)" />
-		  	<!--/TMPL_IF-->
+	
+				<input type="text" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" onchange="update(this.form)" <!-- TMPL_IF name="close" -->readonly<!--/TMPL_IF-->/><!-- TMPL_VAR NAME="currency" -->
+		  	
 		</p>
 		<p>
 			<label>Replacement Cost </label>
-			<!-- TMPL_IF name="close" -->
-				<input type="hidden" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" /><!-- TMPL_VAR NAME="rrp" -->
-			<!-- TMPL_ELSE -->
-				<input type="text" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" />
-		  	<!--/TMPL_IF-->
+				<input type="text" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" <!-- TMPL_IF name="close" -->readonly<!--/TMPL_IF--> />
+		  	
+		</p>
+		<p>
+			<label>Discount Applied</label>
+			<input type="text" size="20" name="discount" value="<!-- TMPL_VAR NAME="discount" -->" onchange="update(this.form)" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />%
 		</p>
 		<p>
 			<label>Budgeted Cost</label>
-			<input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->"<!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />
+			<input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />
 		</p>
+		<!--TMPL_IF NAME="gstreg"-->
 		<p>
 			<label>Budgeted GST</label>
-			<input type="text" size="20" name="GST" value="" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />
+			<input type="text" size="20" name="GST" value="<!-- TMPL_VAR NAME="gst" -->" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />
 		</p>
+		<!--/TMPL_IF-->
 		<p>
 			<label><b>BUDGETED TOTAL</b></label>
-			<input type="text" size="20" name="total" value="" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />
+			<input type="text" size="20" name="total" value="<!-- TMPL_VAR name="total"-->" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />
 		</p>
 		<p>
-			<label>Actual Cost</label>
-			<input type="text" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> />
+			<label>Unit Cost</label>
+			<input type="text" size="20" name="unitprice" value="<!-- TMPL_VAR name="unitprice"-->" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> /><!--TMPL_IF NAME="gstreg"-->includes any applicable tax less any discount<!--/TMPL_IF-->
 		</p>
 		<p>
-			<label>Invoice Number *</label>
-			<input type="text" size="20" name="invoice"  value="<!-- TMPL_VAR name="invoice" -->" />
+			<label>Purchase Order No </label>
+			<input type="text" size="20" name="purchaseordernumber"  value="<!-- TMPL_VAR name="purchaseordernumber" -->" <!-- TMPL_IF name="close" -->readonly <!--/TMPL_IF--> /> (using recommended!)
 		</p>
 		<p>
 			<label>Notes</label>
