--- a/koha-tmpl/intranet-tmpl/prog/en/members/boraccount.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/boraccount.tmpl
@@ -1,15 +1,12 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Account for  <!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->KOHA -- Account for  <!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 
-<!-- The table with the account items -->
-
-<h1>Account for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></h1>
-
-<table>
+<div class="table"><table>
+<caption>Account for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></caption>
   <tr>
   	<th>Date</th>
+	<th>Click to credit</th>
     <th>Description of Charges</th>
     <th>Amount</th>
     <th>Still Owed</th>
@@ -19,26 +16,23 @@
 
    <!-- TMPL_IF NAME="toggle" --> <tr><!-- TMPL_ELSE --><tr class="highlight"><!-- /TMPL_IF -->
       <td><!-- TMPL_VAR NAME="date" --></td>
+   <td>  <!-- TMPL_IF NAME="amountoutstandingcredit" --><!-- TMPL_VAR NAME="itemnum" --><!-- TMPL_ELSE --><a href="mancredit.pl?itemnum=<!-- TMPL_VAR NAME="itemnum" -->&accountid=<!-- TMPL_VAR NAME="accountid" -->&bornum=<!-- TMPL_VAR NAME="bornum" -->&accounttype=<!-- TMPL_VAR NAME="accounttype" -->&amount=<!-- TMPL_VAR NAME="amountoutstanding" -->&user=<!-- TMPL_VAR NAME="firstname" -->%20<!-- TMPL_VAR NAME="surname" -->"><!--TMPL_IF NAME="itemnum"--><!-- TMPL_VAR NAME="itemnum" --><!--TMPL_ELSE-->Click<!--/TMPL_IF--></a><!-- /TMPL_IF --></td>
       <td><!-- TMPL_VAR NAME="description" --><!-- TMPL_IF NAME="printtitle" --> <!-- TMPL_VAR NAME="title" --><!-- /TMPL_IF --></td>
-      <!-- TMPL_IF NAME="amountcredit" --><td class="credit"><!-- TMPL_ELSE --><td class="debit"><!-- /TMPL_IF -->$<!-- TMPL_VAR NAME="amount" --></td>
-      <!-- TMPL_IF NAME="amountoutstandingcredit" --><td class="credit"><!-- TMPL_ELSE --><td class="debit"><!-- /TMPL_IF -->$<!-- TMPL_VAR NAME="amountoutstanding" --></td>
+      <!-- TMPL_IF NAME="amountcredit" --><td class="credit"><!-- TMPL_ELSE --><td class="debit"><!-- /TMPL_IF --><!-- TMPL_VAR NAME="amount" --> </td>
+      <!-- TMPL_IF NAME="amountoutstandingcredit" --><td class="credit"><!-- TMPL_ELSE --><td class="debit"><!-- /TMPL_IF --><!-- TMPL_VAR NAME="amountoutstanding" --> YTL</td>
     </tr>
 
   <!-- /TMPL_LOOP -->
 <tfoot>
   <tr>
-    <td colspan="3">Total Due</td>
-    <!-- TMPL_IF NAME="totalcredit" --><td class="credit"><!-- TMPL_ELSE --><td class="debit"><!-- /TMPL_IF -->$<!-- TMPL_VAR NAME="total" --></td>
+    <td colspan="4">Total Due</td>
+    <!-- TMPL_IF NAME="totalcredit" --><td class="credit"><!-- TMPL_ELSE --><td class="debit"><!-- /TMPL_IF --><!-- TMPL_VAR NAME="total" --> YTL</td>
   </tr>
   </tfoot>
-</table>
+</table></div>
 <!-- The manual invoice and credit buttons -->
-
-<form action="/cgi-bin/koha/members/maninvoice.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /><input type="submit" value="Create Manual Invoice" /></form>
-
-<form action="/cgi-bin/koha/members/mancredit.pl" method="get"> <input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Create Manual Credit" /></form>
-
-<form action="/cgi-bin/koha/members/moremember.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Return to Patron Record" /></form>
-
+<div class="tabitem">
+<form action="maninvoice.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /><input type="submit" class="submit" value="Create Manual Invoice" /></form><form action="moremember.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Return to User Record" class="submit" /></form>
+</div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
