*** empty log message ***

--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
@@ -97,7 +97,7 @@ legend {
 #mainmenu {
     display:block;
     float:left;
-    margin-right:20px;
+    margin-right:2px;
     border-right:1px solid black;
 }
 
@@ -136,3 +136,41 @@ legend {
     font-size:10pt;
 }
 
+#main {
+	background-color : #C2CED3;
+	border-left : 1px solid #000000;
+	margin-left : 20%;
+	margin-right : 1%;
+	margin-top : 2%;
+	padding : 10px;
+}
+
+#facetsmenu {
+position : absolute;
+left : 1px;
+width : 15%;
+    display:block;
+    float:left;
+    margin-right:2px;
+    margin-top:2%;
+    border-right:1px solid black;
+}
+#facetsmenu ul {
+	background-color : #C4C6C7;
+	border-bottom : 1px solid #FFFFCC;
+	border-left : 0px solid #FFFFCC;
+	border-right : 0px solid #006699;
+	border-top : 0px solid #FFFFCC;
+	font-size : .8em;
+	list-style : none;
+	padding : 2px;
+	text-align : left;
+	width : 100%;
+}
+#facetsmenu ul li {
+	
+	list-style : none;
+	padding : 1px;
+	text-align : right;
+	
+}
